# Aircraft_mini_project

./: CMakeLists.txt  main.cpp
classes/: CAircraft.cpp  CAircraftFactory.cpp  CAirplane.cpp  CGlider.cpp  CGlinder.cpp  FlyingObject.cpp
headers/: CAircraft.h  CAircraftFactory.h  CAirplane.h  CAirplane_test.h  CGlider.h  CGlinder.h  FlyingObject.h
unit_test/: CAircraftFactory_test.cpp  CAirplane_test.cpp  CGlider_tests.cpp  CGlider_tests.h  main_test.cpp
